<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hokie Planner</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Checksheet</string>
    <string name="title_section3">Course Diagram</string>
    <string name="title_section4">Timetable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login_label_text">Login to HokieSpa</string>
    <string name="login_pid_hint">PID</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_submit_text">Login</string>
    <string name="login_cancel_text">Cancel</string>
    <string name="title_activity_login">HokieSpa Login</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="login_remember_text">Remember username</string>
    <string name="login_warning_text">Warning: Logging in is done through CAS, which will expire after a day</string>
    <string name="group_title_text">Group Title</string>
    <string name="welcome_string">Welcome</string>
    <string name="selected_major_text">Selected Major:</string>
    <string name="zero_credits_text">Total Credits Completed: 0</string>
    <string name="selected_year_text">Selected Year:</string>
    <string name="change_major_text">Change Major</string>
    <string name="title_activity_major_picker">Select Major and Year</string>
    <string name="hello_world">Hello world!</string>
    <string name="credit_down_text">-</string>
    <string name="credit_up_text">+</string>
    <string name="change_state">Change state</string>
    
</resources>
