<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.gorilla.hokieplanner.guerilla.PlannerActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_string"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/welcome_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_label"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="26sp" />

    <TextView
        android:id="@+id/credits_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_name_label"
        android:layout_centerHorizontal="true"
        android:text="@string/zero_credits_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/selected_major_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credits_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/selected_major_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/selected_major_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_major_label"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/welcome_btn_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:dividerPadding="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/change_course_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changeCourse"
            android:text="@string/change_major_text" />

        <Button
            android:id="@+id/login_logout_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loginLogout"
            android:text="@string/login_text" />
    </LinearLayout>

</RelativeLayout>